[package]
name = "can-socket"
version = "0.1.0"
license = "BSD-2-Clause"
keywords = ["CAN", "SocketCAN", "socket", "controller area network", "network"]
categories = ["os", "hardware-support", "network-programming", "science::robotics"]

edition = "2021"

[dependencies]
filedesc = "0.6.3"
libc = "0.2.148"
tokio = { version = "1.32.0", optional = true, features = ["net"] }

[dev-dependencies]
can-socket = { path = ".", features = ["tokio"] }
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
