[package]
name = "can-socket"
description = "no frills CAN sockets (blocking or async with tokio)"
version = "0.1.2"
license = "BSD-2-Clause"
keywords = ["CAN", "SocketCAN", "socket", "CANbus", "network"]
categories = ["os", "hardware-support", "network-programming", "science::robotics"]
repository = "https://github.com/de-vri-es/can-socket-rs/tree/main/can-socket"
documentation = "https://docs.rs/can-socket"

edition = "2021"
publish = ["crates-io"]

[dependencies]
filedesc = "0.6.3"
libc = "0.2.148"
tokio = { version = "1.32.0", optional = true, features = ["net"] }

[dev-dependencies]
assert2 = "0.3.14"
can-socket = { path = ".", features = ["tokio"] }
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
