[package]
name = "can-socket"
description = "no frills CAN sockets (synchronous or async with tokio)"
version = "0.3.3"
license = "BSD-2-Clause"
keywords = ["CAN", "SocketCAN", "socket", "CANbus", "network"]
categories = ["os", "hardware-support", "network-programming", "science::robotics"]
repository = "https://github.com/de-vri-es/can-socket-rs"
documentation = "https://docs.rs/can-socket"
readme = "README.md"

edition = "2021"
publish = ["crates-io"]

[features]
vcan-tests = []
tokio = ["dep:tokio"]
doc = ["tokio", "tokio?/test-util"]
doc-cfg = []

[dependencies]
filedesc = "0.6.3"
libc = "0.2.148"
tokio = { version = "1.42.0", optional = true, features = ["net", "time"] }

[dev-dependencies]
assert2 = "0.3.14"
can-socket = { path = ".", features = ["tokio"] }
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "test-util"] }
trybuild = { version = "1.0.101", features = ["diff"] }

[package.metadata.docs.rs]
features = ["doc", "doc-cfg"]
